--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ table, th, td {
 } 
 </style>
         <caption>Favorite trips</caption>
-        <!--I dont want to talk about it... we havent gotten to effiecient coding yet :0-->
+        <!--very sloppy coding :(-->
 
 <th>Trip Name</th>
 <th>Picture</th>
@@ -46,4 +46,5 @@ table, th, td {
         
 </table>
 </body>
+
 </html>
