--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ table, th, td {
 <th>Picture</th>
 <tr>
 <th>Pictured Rocks</th>
-<!--Used W3 website to find how to fit image inside of the table.-->
+<!--Used height and width to fit to table-->
 <td><img src="pic4.jpg" height="100" width="100" alt="Pictured Rocks"></td>
 </tr>
 <th>Grand Canyon</th>
@@ -48,3 +48,4 @@ table, th, td {
 </body>
 
 </html>
+
